fix(layout): avoid mobile clipping from wide article content

--- a/sass/_article.scss
+++ b/sass/_article.scss
@@ -1,3 +1,7 @@
+article {
+	min-width: 0;
+}
+
 #banner-container {
 	--mask: linear-gradient(black, transparent);
 	-webkit-user-select: none;
