--- a/sass/_table.scss
+++ b/sass/_table.scss
@@ -24,15 +24,16 @@ table {
 }
 
 @media only screen and (max-width: 720px) {
-	table {
+	article table {
 		display: block;
+		width: 100%;
 		max-width: 100%;
 		overflow-x: auto;
 		-webkit-overflow-scrolling: touch;
 	}
 
-	th,
-	td {
+	article th,
+	article td {
 		white-space: nowrap;
 	}
 }
